added css styling to recipes & finished tutorial

--- a/recipes/chickenspaghetti.html
+++ b/recipes/chickenspaghetti.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Odin Recipes: Chicken Spaghetti</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -11,26 +12,26 @@
         </p>
         <h1>Chicken Spaghetti Recipe</h1>
         <p>
-            <h1><em>Ingredients</em></h1>
+            <h1 class="miniheader"><em>Ingredients</em></h1>
         </p>
         <p>
             <ul>
-                <li>1 (12 ounce) package angel hair pasta</li>
-                <li>1 (10 ounce) can diced tomatoes with green chile peppers</li>
-                <li>1 (10.75 ounce) can condensed cream of chicken soup</li>
-                <li>¾ (8 ounce) package processed cheese, cubed</li>
-                <li>2 cups chopped cooked chicken breast/li>
-                <li>½ (4 ounce) jar sliced mushrooms, drained</li>
-                <li>salt and pepper to taste</li>
+                <li>1 (12 ounce) package angel hair pasta</li><br>
+                <li>1 (10 ounce) can diced tomatoes with green chile peppers</li><br>
+                <li>1 (10.75 ounce) can condensed cream of chicken soup</li><br>
+                <li>¾ (8 ounce) package processed cheese, cubed</li><br>
+                <li>2 cups chopped cooked chicken breast</li><br>
+                <li>½ (4 ounce) jar sliced mushrooms, drained</li><br>
+                <li>salt and pepper to taste</li><br>
             </ul>
         </p>
         <p>
-            <h1><em>Directions</em></h1>
+            <h1 class="miniheader"><em>Directions</em></h1>
         </p>
          <p>
             <ol>
-                <li>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain and return to pot.</li>
-                <li>To the pasta add the diced tomatoes with green chile peppers, cream of chicken soup, processed cheese, chopped chicken, mushrooms, salt and pepper. Cook and stir over low heat until cheese is melted and mixture is heated through.</li>
+                <li>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain and return to pot.</li><br>
+                <li>To the pasta add the diced tomatoes with green chile peppers, cream of chicken soup, processed cheese, chopped chicken, mushrooms, salt and pepper. Cook and stir over low heat until cheese is melted and mixture is heated through.</li><br>
             </ol>
         </p>
     </body>
