--- a/recipes/screwdriver.html
+++ b/recipes/screwdriver.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Odin Recipes: Screwdriver</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -11,23 +12,23 @@
         </p>
         <h1>Screwdriver</h1>
         <p>
-            <h1><em>Ingredients</em></h1>
+            <h1 class="miniheader"><em>Ingredients</em></h1>
         </p>
         <p>
             <ul>
-                <li>1/2 to 3/4 cup ice cubes</li>
-                <li>2 ounces vodka</li>
-                <li>3 ounces orange juice</li>
-                <li>Orange slice</li>
+                <li>1/2 to 3/4 cup ice cubes</li><br>
+                <li>2 ounces vodka</li><br>
+                <li>3 ounces orange juice</li><br>
+                <li>Orange slice</li><br>
             </ul>
         </p>
         <p>
-            <h1><em>Directions</em></h1>
+            <h1 class="miniheader"><em>Directions</em></h1>
         </p>
          <p>
             <ol>
-                <li>Place ice in a rocks glass. Pour the vodka and orange juice into the glass. Garnish with orange slice.</li>
-                <li>Enjoy!</li>
+                <li>Place ice in a rocks glass. Pour the vodka and orange juice into the glass. Garnish with orange slice.</li><br>
+                <li>Enjoy!</li><br>
             </ol>
         </p>
 
