--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Odin Recipes: Banana Bread</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -11,23 +12,23 @@
         </p>
         <h1>Banana Bread</h1>
         <p>
-            <h1><em>Ingredients</em></h1>
+            <h1 class="miniheader"><em>Ingredients</em></h1>
         </p>
         <p>
             <ul>
-                <li>3-4 very ripe bananas</li>
-                <li>1 box (15.25 ounces) yellow cake mix</li>
-                <li>2 large eggs</li>
+                <li>3-4 very ripe bananas</li><br>
+                <li>1 box (15.25 ounces) yellow cake mix</li><br>
+                <li>2 large eggs</li><br>
             </ul>
         </p>
         <p>
-            <h1><em>Directions</em></h1>
+            <h1 class="miniheader"><em>Directions</em></h1>
         </p>
          <p>
             <ol>
-                <li>The key to flavorful banana bread is using very ripe bananas. As the skin darkens, the banana flavor becomes more pronounced. You’ll need 1-1/2 cups of mashed bananas for this recipe, so I used about 3 ripe bananas.</li>
-                <li>In a large bowl, combine the mashed bananas with the cake mix and two eggs. Mix well until the ingredients are combined.</li>
-                <li>Transfer the batter to a greased 9×5 inch loaf pan. Bake in a preheated 350°F oven for 45 minutes or until a tester inserted in the center of the loaf comes out clean. Cool in the pan on a wire rack for 10 minutes, then invert onto the rack to cool completely before slicing.</li>
+                <li>The key to flavorful banana bread is using very ripe bananas. As the skin darkens, the banana flavor becomes more pronounced. You’ll need 1-1/2 cups of mashed bananas for this recipe, so I used about 3 ripe bananas.</li><br>
+                <li>In a large bowl, combine the mashed bananas with the cake mix and two eggs. Mix well until the ingredients are combined.</li><br>
+                <li>Transfer the batter to a greased 9×5 inch loaf pan. Bake in a preheated 350°F oven for 45 minutes or until a tester inserted in the center of the loaf comes out clean. Cool in the pan on a wire rack for 10 minutes, then invert onto the rack to cool completely before slicing.</li><br>
             </ol>
         </p>
 
