updated css on index.html to match other pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style>
+            p
+            {
+                font-size: 20px;
+            }
+        </style>
+        <link rel="stylesheet" href="./recipes/style.css"
         <meta charset="utf-8">
         <title>Odin Recipes</title>
     </head>
@@ -28,6 +35,11 @@
             <img src="./images/screwdriver.jpg" alt="Screwdriver Picture">
         </p>
 
+        <p>
+            <div style="color: purple; border-style: inset;">
+            Dalen M. Fitzgerald || May 7, 2022
+            </div>
+        </p>
 
     </body>
 
