final css updates to recipe site

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        Please click on the item to learn more!
+        <h1>Odin Recipes!!</h1><br>
+        <p></p>Please click on the item to learn more!</p><br>
         
         
         <p>
