fixed typos: Chicken Spaghetti /h1>

--- a/recipes/chickenspaghetti.html
+++ b/recipes/chickenspaghetti.html
@@ -10,7 +10,7 @@
         <p>
             <img src="../images/chickenspaghetti.jpg" alt="Chicken Spaghetti Picture">
         </p>
-        <h1>Chicken Spaghetti/h1>
+        <h1>Chicken Spaghetti</h1>
         <p>
             <h1 class="miniheader"><em>Ingredients</em></h1>
         </p>
